# somafm

./: AUTHORS  README.md  com.github.alexkdeveloper.somafm.json  meson.build  snapcraft.yaml
.github/workflows/: flatpak.yml  main.yml
data/: com.github.alexkdeveloper.somafm.appdata.xml.in  com.github.alexkdeveloper.somafm.desktop.in  meson.build
po/: LINGUAS  POTFILES  be.po  cs.po  meson.build  nl.po  ru.po  somafm.pot  tr.po
src/: Application.vala  MainWindow.vala  PulseAudioManager.vala  Recorder.vala  meson.build
